--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -29,7 +29,11 @@
   border-radius: 16px;
 }
 
+*{
+  box-sizing: border-box;
+  margin: 0;
 
+}
 
 /* ::-webkit-scrollbar-button:single-button:decrement {
   background: url('path/to/up-arrow.png') no-repeat center;
@@ -40,3 +44,39 @@
   background: url('path/to/up-arrow.png') no-repeat center;
   background-size: contain;
 } */
+
+img{
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.grid-wrapper > div {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.grid-wrapper > div > img {
+  width:100%;
+  height:100%;
+  object-fit: contain;
+  border-radius: 5px;
+}
+
+.grid-wrapper {
+  padding: 5px;
+  display:grid;
+  grid-gap:16px;
+  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  grid-auto-rows:300px;
+  grid-auto-flow:dense;
+}
+
+.scrolling-wrapper {
+  width: 100%; /* Take full width of parent container */
+  height: 100vh; /* Take full height of parent container */
+  overflow-y: auto; /* Enable vertical scrolling */
+}
+
