--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -56,6 +56,7 @@ img{
   display:flex;
   justify-content:center;
   align-items:center;
+  width:100%;
 }
 
 .grid-wrapper > div > img {
@@ -77,6 +78,7 @@ img{
 .scrolling-wrapper {
   width: 100%; /* Take full width of parent container */
   height: 100vh; /* Take full height of parent container */
+  
   overflow-y: auto; /* Enable vertical scrolling */
 }
 
