--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -1,84 +1,248 @@
+@import"https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap";
 .embla {
-  overflow: hidden;
+  max-width: 48rem;
+  margin: auto;
+  --slide-height: 19rem;
+  --slide-spacing: 0rem;
+  --slide-size: 90%
+}
 
+.embla__viewport {
+  overflow: hidden
 }
+
 .embla__container {
+  backface-visibility: hidden;
   display: flex;
+  touch-action: pan-y pinch-zoom;
+  margin-left: calc(var(--slide-spacing) * -1)
 }
+
+.embla__slide {
+  max-height: 750px;
+  min-width: 0;
+  padding-left: var(--slide-spacing);
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column
+}
+
+.embla__slide__number {
+  box-shadow: inset 0 0 0 .2rem var(--detail-medium-contrast);
+  border: 1px solid black;
+  border-radius: 1.8rem;
+  font-size: 4rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--slide-height)
+}
+
+.embla__button {
+  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value),.5);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  box-shadow: inset 0 0 0 .2rem var(--detail-medium-contrast);
+  width: 3.6rem;
+  height: 3.6rem;
+  z-index: 1;
+  border-radius: 50%;
+  color: var(--text-body);
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.embla__button:disabled {
+  color: var(--detail-high-contrast)
+}
+
+.embla__button__svg {
+  width: 35%;
+  height: 35%
+}
+
+@media all and (min-width: 380px) and (max-width: 750px) {
+  .embla__slide {
+      max-height:650px
+  }
+
+  .embla {
+      max-width: 40rem
+  }
+}
+
+html {
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  line-height: 1.15;
+  background-color: var(--background-site);
+  font-size: 62.5%;
+  font-family: Inter,"system-ui",-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol
+}
+
+*,*:before,*:after {
+  box-sizing: inherit
+}
+
+body {
+  background-color: var(--background-site);
+  color: var(--text-high-contrast);
+  font-size: 1.6rem;
+  line-height: 1.65
+}
+
+.theme-light {
+  --brand-primary: rgb(47, 112, 193);
+  --brand-secondary: rgb(116, 97, 195);
+  --brand-alternative: rgb(19, 120, 134);
+  --background-site: rgb(249, 249, 249);
+  --background-code: rgb(244, 244, 244);
+  --text-body: rgb(54, 49, 61);
+  --text-comment: rgb(99, 94, 105);
+  --text-high-contrast: rgb(49, 49, 49);
+  --text-medium-contrast: rgb(99, 94, 105);
+  --text-low-contrast: rgb(116, 109, 118);
+  --detail-high-contrast: rgb(192, 192, 192);
+  --detail-medium-contrast: rgb(234, 234, 234);
+  --detail-low-contrast: rgb(240, 240, 242);
+  --admonition-note: rgb(46, 109, 188);
+  --admonition-warning: rgb(255, 196, 9);
+  --admonition-danger: rgb(220, 38, 38);
+  --brand-primary-rgb-value: 47, 112, 193;
+  --brand-secondary-rgb-value: 116, 97, 195;
+  --brand-alternative-rgb-value: 19, 120, 134;
+  --background-site-rgb-value: 249, 249, 249;
+  --background-code-rgb-value: 244, 244, 244;
+  --text-body-rgb-value: 54, 49, 61;
+  --text-comment-rgb-value: 99, 94, 105;
+  --text-high-contrast-rgb-value: 49, 49, 49;
+  --text-medium-contrast-rgb-value: 99, 94, 105;
+  --text-low-contrast-rgb-value: 116, 109, 118;
+  --detail-high-contrast-rgb-value: 192, 192, 192;
+  --detail-medium-contrast-rgb-value: 234, 234, 234;
+  --detail-low-contrast-rgb-value: 240, 240, 242;
+  --admonition-note-rgb-value: 46, 109, 188;
+  --admonition-warning-rgb-value: 255, 196, 9;
+  --admonition-danger-rgb-value: 220, 38, 38
+}
+
+.theme-dark {
+  --brand-primary: rgb(138, 180, 248);
+  --brand-secondary: rgb(193, 168, 226);
+  --brand-alternative: rgb(136, 186, 191);
+  --background-site: rgb(0, 0, 0);
+  --background-code: rgb(12, 12, 12);
+  --text-body: rgb(222, 222, 222);
+  --text-comment: rgb(170, 170, 170);
+  --text-high-contrast: rgb(230, 230, 230);
+  --text-medium-contrast: rgb(202, 202, 202);
+  --text-low-contrast: rgb(170, 170, 170);
+  --detail-high-contrast: rgb(101, 101, 101);
+  --detail-medium-contrast: rgb(25, 25, 25);
+  --detail-low-contrast: rgb(21, 21, 21);
+  --admonition-note: rgb(138, 180, 248);
+  --admonition-warning: rgb(253, 186, 116);
+  --admonition-danger: rgb(220, 38, 38);
+  --brand-primary-rgb-value: 138, 180, 248;
+  --brand-secondary-rgb-value: 193, 168, 226;
+  --brand-alternative-rgb-value: 136, 186, 191;
+  --background-site-rgb-value: 0, 0, 0;
+  --background-code-rgb-value: 12, 12, 12;
+  --text-body-rgb-value: 222, 222, 222;
+  --text-comment-rgb-value: 170, 170, 170;
+  --text-high-contrast-rgb-value: 230, 230, 230;
+  --text-medium-contrast-rgb-value: 202, 202, 202;
+  --text-low-contrast-rgb-value: 170, 170, 170;
+  --detail-high-contrast-rgb-value: 101, 101, 101;
+  --detail-medium-contrast-rgb-value: 25, 25, 25;
+  --detail-low-contrast-rgb-value: 21, 21, 21;
+  --admonition-note-rgb-value: 138, 180, 248;
+  --admonition-warning-rgb-value: 253, 186, 116;
+  --admonition-danger-rgb-value: 220, 38, 38
+}
+
+.embla {
+  overflow: hidden
+}
+
+.embla__container {
+  display: flex
+}
+
 .embla__slide {
   flex: 0 0 100%;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
   top: 0;
-  left: 0;
+  left: 0
 }
 
-::-webkit-scrollbar{
-  width: 8px;
+::-webkit-scrollbar {
+  width: 8px
 }
 
-::-webkit-scrollbar-track{
-  background: #252835;
-
+::-webkit-scrollbar-track {
+  background: #252835
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   width: 6px;
   background: #525870;
-  border-radius: 16px;
+  border-radius: 16px
 }
 
-*{
+* {
   box-sizing: border-box;
-  margin: 0;
-
+  margin: 0
 }
 
-/* ::-webkit-scrollbar-button:single-button:decrement {
-  background: url('path/to/up-arrow.png') no-repeat center;
-  background-size: contain;
-}
-
-::-webkit-scrollbar-button:single-button:increment {
-  background: url('path/to/up-arrow.png') no-repeat center;
-  background-size: contain;
-} */
-
-img{
+img {
   max-width: 100%;
   height: auto;
   vertical-align: middle;
-  display: inline-block;
+  display: inline-block
 }
 
-.grid-wrapper > div {
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  width:100%;
+.grid-wrapper>div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%
 }
 
-.grid-wrapper > div > img {
-  width:100%;
-  height:100%;
+.grid-wrapper>div>img {
+  width: 100%;
+  height: 100%;
   object-fit: contain;
-  border-radius: 5px;
+  border-radius: 5px
 }
 
 .grid-wrapper {
   padding: 5px;
-  display:grid;
-  grid-gap:16px;
-  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
-  grid-auto-rows:300px;
-  grid-auto-flow:dense;
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: repeat(auto-fit,minmax(375px,1fr));
+  grid-auto-rows: 300px;
+  grid-auto-flow: dense
 }
 
 .scrolling-wrapper {
-  width: 100%; /* Take full width of parent container */
-  height: 100vh; /* Take full height of parent container */
-  
-  overflow-y: auto; /* Enable vertical scrolling */
+  width: 100%;
+  height: 100vh;
+  overflow-y: auto
 }
-
