--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -215,34 +215,35 @@ img {
   max-width: 100%;
   height: auto;
   vertical-align: middle;
-  display: inline-block
+  display: inline-block;
+}
+
+.grid-wrapper {
+  padding:32px;
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: repeat(auto-fit,minmax(375px,1fr));
+  grid-auto-rows: auto;
 }
 
 .grid-wrapper>div {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%
+  width: 100%;
+  height: 100%; /* Ensure full height for divs */
 }
 
 .grid-wrapper>div>img {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
-  border-radius: 5px
+  height: auto; /* Maintain aspect ratio and avoid stretching */
+  object-fit: cover;
+  border-radius: 5px;
 }
 
-.grid-wrapper {
-  padding: 5px;
-  display: grid;
-  grid-gap: 16px;
-  grid-template-columns: repeat(auto-fit,minmax(375px,1fr));
-  grid-auto-rows: 300px;
-  grid-auto-flow: dense
-}
 
 .scrolling-wrapper {
+  height: calc(100vh - 154px);
   width: 100%;
-  height: 100vh;
-  overflow-y: auto
+  overflow-y: auto;
 }
