--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -273,3 +273,75 @@ img {
   width: 100%; 
   overflow: clip;
 }
+
+.gallery{
+  -webkit-column-count: 5;
+  -moz-column-count: 5;
+  column-count: 5;
+  -webkit-column-width: 20%;
+  -moz-column-width: 20%;
+  column-width: 20%;
+  margin-top:64px;
+  column-gap: 0;
+}
+
+
+.img-lol{
+ width: 100%;
+ padding: 8px;
+}
+
+.img-lol:hover{
+  opacity:0.6;
+  cursor: pointer;
+}
+
+
+
+@media (max-width: 1600px){
+  .gallery{
+    -webkit-column-count: 4;
+    -moz-column-count: 4;
+    column-count: 4;
+    -webkit-column-width: 25%;
+    -moz-column-width: 25%;
+    column-width: 25%;
+
+  }
+}
+
+@media (max-width: 1000px){
+  .gallery{
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-width: 33%;
+    -moz-column-width: 33%;
+    column-width: 33%;
+
+  }
+}
+
+@media (max-width: 720px){
+  .gallery{
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-width: 50%;
+    -moz-column-width: 50%;
+    column-width: 50%;
+
+  }
+}
+
+@media (max-width: 320px){
+  .gallery{
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+
+  }
+}
