--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -1,5 +1,5 @@
 @import"https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap";
-.embla {
+/* .embla {
   max-width: 48rem;
   margin: auto;
   --slide-height: 19rem;
@@ -96,13 +96,18 @@ html {
 
 *,*:before,*:after {
   box-sizing: inherit
-}
+} */
 
-body {
+/* body {
   background-color: var(--background-site);
   color: var(--text-high-contrast);
   font-size: 1.6rem;
   line-height: 1.65
+} */
+.scrolling-wrapper2 {
+  height: calc(100vh - 250px);
+  width: 100%;
+  overflow-y: auto;
 }
 
 .theme-light {
@@ -211,12 +216,12 @@ body {
   margin: 0
 }
 
-img {
+/* img {
   max-width: 100%;
   height: auto;
   vertical-align: middle;
   display: inline-block;
-}
+} */
 
 .grid-wrapper {
   padding:16px;
@@ -242,11 +247,7 @@ img {
 }
 
 
-.scrolling-wrapper {
-  height: calc(100vh - 250px);
-  width: 100%;
-  overflow-y: auto;
-}
+
 
 .grid--main{
   display: flex;
@@ -288,7 +289,7 @@ img {
 
 .img-lol{
  width: 100%;
- padding: 8px;
+ padding: 16px;
 }
 
 .img-lol:hover{
@@ -343,5 +344,208 @@ img {
     -moz-column-width: 100%;
     column-width: 100%;
 
+  }
+}
+
+/* New styles  */
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility
+}
+
+body{
+  max-width: 2560px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  line-height: 1.4;
+  font-family: Helvetica,Arial,sans-serif;
+  letter-spacing: .015em;
+  word-spacing: .001em
+}
+
+
+.scrolling-wrapper, body {
+  height: 100%;
+  position: relative
+}
+
+.container {
+  position: fixed;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 50% 50%;
+  height: calc(100% - 100px);
+  grid-template-areas: "a b" "c b";
+  margin-top: 64px;
+}
+
+.container,body,html {
+  width: 100%
+}
+
+.thumbnails {
+  grid-area: b
+}
+
+
+.thumbnail {
+  grid-column: span 1;
+  grid-row: span 2;
+  align-self: center;
+  justify-self: center;
+  max-height: 350px;
+  max-width: 100%
+}
+
+.thumbnail:hover {
+  opacity: .5;
+  cursor: pointer
+}
+
+.gallery-index {
+  display: grid;
+  grid-column-start: 2;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 32px 32px;
+  padding: 8px;
+}
+
+img {
+  object-fit: contain;
+  max-height: 100%;
+}
+
+.top {
+  align-self: start;
+  grid-area: a;
+  color:white;
+}
+
+.bottom {
+  align-self: end;
+  grid-area: c;
+  padding-right: 32px;
+  padding-bottom: 32px;
+  color:white;
+}
+
+.scrolling-wrapper {
+  padding: 32px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  display: inline-block;
+  text-align: center;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media (max-width: 1500px) {
+  .gallery-index {
+      grid-template-columns:1fr 1fr 1fr
+  }
+
+  .thumbnail {
+      max-height: 270px
+  }
+}
+
+@media (max-width: 1100px) {
+  .thumbnail {
+      max-height:375px
+  }
+
+  .gallery-index {
+      grid-template-columns: 1fr 1fr
+  }
+}
+
+@media (max-width: 920px) {
+  .next-card,.prev-card {
+      top:64px;
+      height: 75%;
+      width: 20%
+  }
+
+  .prev-card {
+      left: 0
+  }
+
+  .next-card {
+      right: 0
+  }
+
+  .thumbnail {
+      max-height: 330px
+  }
+
+  .gallery-index {
+      grid-column-start: 1;
+      grid-column: span 2;
+      grid-row-start: 2
+  }
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: .5s;
+  animation-name: fade;
+  animation-duration: .5s
+}
+
+@-webkit-keyframes fade {
+  from {
+      opacity: 0
+  }
+
+  to {
+      opacity: 1
+  }
+}
+
+@keyframes fade {
+  from {
+      opacity: 0
+  }
+
+  to {
+      opacity: 1
+  }
+}
+
+@media (max-width: 920px) {
+  
+  .container {
+      grid-template-columns: 100%;
+      grid-template-rows: auto 1fr 1fr auto;
+      grid-template-areas: "a" "b" "b" "c"
+  }
+
+  .top {
+      margin-bottom: 16px
+  }
+
+  .bottom {
+      padding-top: 16px;
+      padding-right: 0
+  }
+
+  .carousel {
+      touch-action: manipulation
+  }
+
+  img {
+      object-fit: contain;
+      max-height: 100%
+  }
+
+  .display-left,.display-right {
+      width: 20%
   }
 }
