Changed font to Teko

--- a/photography-portfolio/src/index.css
+++ b/photography-portfolio/src/index.css
@@ -1,6 +1,6 @@
-body {
-  background-color: #101118;
-  font-family: 'Oswald', sans-serif;
+* {
+
+  font-family: "Teko", serif;
 }
 
 .scrolling-wrapper2 {
